maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:52: error: not enough arguments for method remplissage: (i: Int, j: Int, compt: Int)Int.
Unspecified value parameters i, j, compt.
		while(remplissage() == 0)
                                 ^